<resources>
    <string name="app_name">GoMeet</string>
    <string name="chat_api_key">e43k9kfvgyze</string>
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="recommended">Recommended</string>
    <string name="events">Events</string>
    <string name="participants_button">"Manage Participants"</string>
    <string name="tag_sort">By common tags</string>
    <string name="log_in_button">Log In</string>
    <string name="post_event_button">Post</string>
    <string name="follow_button">Follow</string>
    <string name="unfollow_button">Unfollow</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="delete_event">Delete Event</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="posts">Posts</string>
    <string name="add_post">Add a Post</string>
    <string name="new_post_placeholder_text">What\'s new ?</string>
...
    <string name="search_bar_placeholder">Search</string>
    <string name="add_participants">Add Participants</string>
    <string name="add_image">Add Image</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="email_text_field">Email</string>
    <string name="password_text_field">Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="username_text_field">Username</string>
    <string name="confirm_password_text_field">Confirm Password</string>
    <string name="first_name_text_field">First Name</string>
    <string name="first_name_text_field_error">First Name is not valid</string>
    <string name="last_name_text_field">Last Name</string>
    <string name="last_name_text_field_error">Last Name is not valid</string>
    <string name="phone_number_text_field">Phone Number</string>
...
    <string name="register_username_email_text">Welcome to GoMeet !\nPlease enter a username and an email.</string>
    <string name="username_too_long_error">Your Username Should Not Exceed 26 characters</string>
    <string name="invalid_username_error">The Username is not valid or already taken</string>
    <string name="invalid_email_error">The Email is not valid or already taken</string>
    <string name="create">Create</string>
    <string name="title_text_field_placeholder">Create</string>
    <string name="join_event_button">Join Event</string>
    <string name="leave_event_button">Leave Event</string>
</resources>
