...
        Column {
          Box(contentAlignment = Alignment.Center) {
            Row(
                modifier = Modifier.fillMaxWidth(),
                verticalAlignment = Alignment.CenterVertically) {
                  IconButton(
                      modifier = Modifier.testTag("GoBackFollower"), onClick = { nav.goBack() }) {
                        Icon(
                            Icons.AutoMirrored.Filled.KeyboardArrowLeft,
                            contentDescription = "Go back",
                            tint = MaterialTheme.colorScheme.onBackground)
                      }
                }
...
                    shape = RoundedCornerShape(10.dp),
                    onClick = {
                      userViewModel.unfollow(user.uid)
                      isFollowing = false
                    },
                    modifier =
                        Modifier.padding(start = 15.dp).width(110.dp).testTag("UnfollowButton"),
                    colors =
                        ButtonColors(
                            containerColor = MaterialTheme.colorScheme.primaryContainer,
                            contentColor = MaterialTheme.colorScheme.onBackground,
                            disabledContentColor = Color.Transparent,
                            disabledContainerColor = Color.Transparent)) {
...
